Release 5.0.0: Finalise EclipseStore backend
* Update documentation
* Add Grafana dashboard